--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -62,6 +62,9 @@ On the case picture below, you can see the left and right speakers under the tra
 
 You can actually see the two stereo speakers beneath the translucent cover, and next to it the small vibrator motor.
 
+Next to the top of the picture is a hole near the speaker.
+The external GSM antenna connector is accessed through this hole.
+
 == GSM Antenna ==
 
 [[Image:Gta01b v3 gsm antenna.jpg|700px]]
