/* Removing PCB from case frame */

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -45,7 +45,8 @@ This shows:
 Invisible 
 On the other side of the PCB, going from bottom-right corner down-left.
 
-*The small circular connector is the GSM connector to which the ariel connects.
+*The small circular connector is the GSM connector to which an external ariel can be connected with the back removed, or with an alternative back.
+
 *To the left of this is the right speaker connector.
 *One of the button switches.
 *USB port.
