erase environment explicitly; update environment offset, if needed

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -418,8 +418,17 @@ See also: [[U-boot]]
 '''(Role: LAB)'''
 
 Last but not least, we have to set up the boot loader to automatically boot
-from Flash. This is in fact easy, since we've already wiped out the
-environment, and can thus simply let it restore the default settings.
+from Flash. For this, we use the default environment settings, which we obtain
+by erasing the old content of the environment, and letting u-boot restore the
+settings after a restart.
+
+Before touching the environment, you may have to update the environment offset.
+Please see [[Migration_to_bad_block_tolerant_builds#Partition_sizing]] for details.
+(We may simplify this particularly awkward and error-prone procedure in the
+future.)
+
+* First, remove erase the old environment:
+  GTA01Bv2 # nand erase env
 
 * We reset to force the boot loader to use the default settings.
  GTA01Bv2 # reset
