added "dynpart" after reset

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -428,13 +428,17 @@ Please see [[Migration_to_bad_block_tolerant_builds#Partition_sizing]] for detai
 future.)
 
 * First, remove erase the old environment:
-  GTA01Bv2 # nand erase env
+ GTA01Bv2 # nand erase env
 
 * We reset to force the boot loader to use the default settings.
  GTA01Bv2 # reset
 
 Wait until the "U-Boot [...]" message, then hit a key. It will display 
  *** Warning - bad CRC or NAND, using default environment
+
+* Re-generate the partition information in the environment variable "mtdparts":
+
+ GTA01Bv2 # dynpart
 
 * Save the restored settings in NAND
  GTA01Bv2 # saveenv
