/* Touch Screen */ Driver url fixed. Backlight heading removed (already mentioned in LCD section).

--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -77,7 +77,7 @@ This is a 2.8" 480x640 toppoly (tpo) TD028TTEC1 module, using a Toshiba JBT6K74 
 ==== Touch Screen ====
 
 * Connected to: S3C2410 TS controller
-* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/qt2410-touchscreen.patch Backlight Driver:
+* Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2410_touchscreen.patch
 
 === Bluetooth ===
 
