*Empty MediaWiki Message*

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -92,4 +92,4 @@ Hardware acceleration for video playback.
 3D hardware acceleration for 3D games, GUIs, etc.
 
 =====Alcohol Sensor=====
-Alcohol sensor adjacent to microphone.  It doesn't have to be accurate, just has to detect any amount of alcohol on the speaker's breath.
+Alcohol sensor adjacent to microphone.  It doesn't have to be accurate, just has to detect any amount of alcohol on the speaker's breath.  I understand this is a very narrow market, but alcohol is on every parent's mind.
