*Empty MediaWiki Message*

--- a/Introduction.mw
+++ b/Introduction.mw
@@ -1,68 +1,11 @@
 ::FIXME: Write short introduction here, make few images, ... just short briefing for anybody who came for the first time, no details, no specifications. 
 
-"The most profound technologies are those that disappear. They weave
-themselves into the fabric of everyday life until they are
-indistinguishable from it."
+OpenMoko is an attempt to create the worlds first completely open mobile phone software stack.
 
-Mark Weiser wrote those words almost 15 years ago in a Scientific
-American article titled, "The Computer for the 21st Century." In it, he
-coined the term "ubiquitous computing", and proposed a set of ground
-rules for  devices of the 21st century.
+Think standardization bottom-up (defined and implemented by the community), instead of top-down (defined by a consortium).
 
-Temporally, we're here. Technologically, we're close. But everyone
-still seems to be talking about ubiquitous computing like a mirage on
-desert road: it's always the same distance away. Sometimes looking at
-common every day objects with a fresh perspective yields interesting
-new ideas.  Today we're going to propose that the foundation for
-ubiquitous computing is already here. All that is stopping us from
-going forward is change of context.
+For a more thorough introduction see [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html this announcement]
 
-Almost everyone we know has a mobile phone. Mobile phones have become
-part of the fabric of everyday life. Does this mean that the mobile
-phone is  the ubiquitous computing device we've all waited for?
-Currently, no. But with a subtle change we would argue, yes.
-
-Mobile phones are closed environments created with a mobile context in
-mind.  But this concept is limiting; a mobile phone has the potential
-to be a platform that can do anything that a small computer with
-broadband access can do. If mobile phones were based on open platforms,
-they would have the potential to bring computing to people in a ways
-traditional computers cannot. Mobile phones can become ubiquitous
-computers.
-
-Ubiquitous computing, however, does not simply mean computers that can
-be carried to work, to the home, to the beach, and to the movies.
-Ubiquitous computers must know where they are, and then must be able to
-merge into the environment.
-
-We put GPS functionality into the Neo1973, because when your phone
-simply knows its location, it can adapt its behavior in significant
-ways without even a hint of artificial intelligence.
-
-How can devices disappear into the background? To be honest, we have
-far more questions than answers here. But do we know what is needed for
-exploring this idea. Developers must have unrestricted access to
-hardware at all times.  Being able to control the microphone, for
-example, will allow phones to sense ambient noise. A simple program
-could prevent your phone from ringing while you're in a conversation.
-
-We will always try our absolute best to give you devices that are as
-open as possible. Our goal is freeing end-users and businesses alike
-from proprietary constraints. We're about encouraging people to modify
-and personalize their software to support their individual needs.
-Building products as we do, we strive to enable people to connect and
-communicate in new and relevant ways, using their own languages and
-their own symbols.
-
-Our company is unconventional, We openly share our roadmap. And today
-we're going to share it with you. (Hopefully, by now, there isn't a
-single person left on this list who thinks we're conventional ;-)
-
-Your participation, in terms of actual code, hardware features,
-suggestions, and usage-scenarios will shape product features of our
-roadmap.
-
-It is based on ...
 
 == Photos ==
 
