*Empty MediaWiki Message*

--- a/Introduction.mw
+++ b/Introduction.mw
@@ -1,11 +1,12 @@
-::FIXME: Write short introduction here, make few images, ... just short briefing for anybody who came for the first time, no details, no specifications. 
-
 OpenMoko is an attempt to create the worlds first completely open mobile phone software stack.
 
-Think standardization bottom-up (defined and implemented by the community), instead of top-down (defined by a consortium).
+We believe in standardization bottom-up (defined and implemented by the community), instead of top-down (defined by a consortium).
 
 For a more thorough introduction see [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html this announcement]
 
+OpenMoko is supposed to run on all kinds of Linux-capable mobile phones. The first fully supported OpenMoko phone is the FIC Neo1973.
+
+This initative has been initiated by FIC Inc. and OpenMoko, Inc.
 
 == Photos ==
 
