/* Run the examples */

--- a/How_to_run_OpenMoko_Apps_on_PC.mw
+++ b/How_to_run_OpenMoko_Apps_on_PC.mw
@@ -26,6 +26,6 @@ Edit $HOME/.gtkrc-2.0 to something like that:
 
 ===Run the examples===
 
-  bin/openmoko-paned-demo
+  bin/openmoko-stylus-demo
   bin/openmoko-finger-demo
   bin/openmoko-chordmaster
