--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -45,7 +45,8 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 *More widely accepted format
 *Only because CF takes too much room (or CF would be the wish, instead)
 
-*See also [[Expansion Back]], replacement backs with additional features.
+=====[[Expansion Back]]=====
+* replacement backs with additional features
 
 =====Thumb keyboard or keyboard attachment accessory=====
 *Could be slide out or clamshell (hinge on long side) design with an external OLED. The keyboard should be protected when not in use.
