--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -49,12 +49,24 @@ The serial port needs a tri-state driver, since it is both connected to the GSM 
 === Preconditions ===
 
 ==== FT2232D EEPROM ====
-Your Debug Board contains a small serial EEPROM which must be flashed correctly.  FIC has done that for you, in case you have officially been supplied with the board.  However, if you are one of the early adopters, the configuration and USB vendorID / productID might have not yet been set correctly. 
 
+Your Debug Board contains a small serial EEPROM which must be flashed correctly.  
+
+{{note|FIC has done that for you, in case you have officially been supplied with the board.  However, if you are one of the early adopters, the configuration and USB vendorID / productID might have not yet been set correctly.}}
+
+===== Flashing with Linux =====
 In order to do so, you can use the ftdi_eeprom program from 
 http://www.intra2net.com/de/produkte/opensource/ftdi/
 
-A suitable EEPROM config file will be posted here soon.
+Furthermore, you will need
+* The EEPROM image http://people.openmoko.org/laforge/misc/debug_board_v2/ftdi_eeprom/neo1973_debug_board_v2.eeprom
+* The EEPROM config http://people.openmoko.org/laforge/misc/debug_board_v2/ftdi_eeprom/neo1973_debug_board_v2.ftdi
+
+===== Flashing with Windows =====
+In order to do so, you can use the FTDI Mprog program from http://www.ftdichip.com/Resources/Utilities/MProg3.0_Setup.exe
+ 
+You will need
+* The EEPROM Template http://people.openmoko.org/laforge/misc/debug_board_v2/mprog_template/neo1973_debugboard_v2.ept
 
 === Hardware connection ===
 
