--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -68,6 +68,20 @@ In order to do so, you can use the FTDI Mprog program from http://www.ftdichip.c
 You will need
 * The EEPROM Template http://people.openmoko.org/laforge/misc/debug_board_v2/mprog_template/neo1973_debugboard_v2.ept
 
+==== Drivers ====
+
+===== Linux =====
+
+Please make sure you have libftdi-0.8 or later.  Earlier versions are known to cause problems
+
+FIXME:
+* udev rule
+* ftdi_sio / usbserial option string
+
+===== Windows =====
+
+Please use the driver from http://people.openmoko.org/laforge/misc/debug_board_v2/windows_drivers/
+
 === Hardware connection ===
 
 * [[Connecting Neo1973 with Debug Board v2]]
