--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -50,7 +50,7 @@ Product Homepage: http://focus.ti.com/general/docs/wtbu/wtbuproductcontent.tsp?t
 
 Product Homepage: http://focus.ti.com/general/docs/wtbu/wtbuproductcontent.tsp?templateId=6123&navigationId=12296&contentId=4701
 
-=== [[Hardware:AGPS]] ===
+=== [[Hardware:AGPS|AGPS]] ===
 Hammerhead AGPS from Global Locate.
 
 * Product Homepage: http://www.globallocate.com/SEMICONDUCTORS/SEMI_HAMMER_Frameset.htm
