--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -74,9 +74,18 @@ You will need
 
 Please make sure you have libftdi-0.8 or later.  Earlier versions are known to cause problems
 
-FIXME:
-* udev rule
-* ftdi_sio / usbserial option string
+Furthermore, you will need to do the following:
+
+====== ftdi_sio module option ======
+
+ rmmod ftdi_sio
+ modprobe ftdi_sio vendor=0x1457 product=0x5118
+
+or the equivalent in your modules.conf
+
+====== udev rule ======
+
+Please install the rules from http://people.openmoko.org/laforge/misc/debug_board_v2/udev_rules/
 
 ===== Windows =====
 
