added faq concerning agps from linuxtogo wiki

--- a/Hardware:AGPS.mw
+++ b/Hardware:AGPS.mw
@@ -16,7 +16,7 @@ The receiver chipsets store this data in flash and load it from there onto the c
 
 AGPS now means to load the almanac and the ephemeris from elsewhere, i.e. via a network. For example for free from the american government: http://www.navcen.uscg.gov/gps/precise/default.htm
 
-_A_GPS is a nice convenience yet the success and proper functioning of TomTom and Navigon PDAs shows that you don't need that at all.
+AGPS is a nice convenience yet the success and proper functioning of TomTom and Navigon PDAs shows that you don't need that at all.
 
 ===== Q: The chip in the Neo1973 is a Global Locate AGPS. Anybody know what type? Hammerhead maybe? =====
 A 1: It is probably the same chipset as in ipaq hw6[59]15: http://wiki.xda-developers.com/index.php?pagename=SableGPS
