--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -16,11 +16,7 @@
 
 == Schematics ==
 
-http://people.openmoko.org/sean_chiang/Debugboard.pdf
-
-http://people.openmoko.org/sean_chiang/top.pdf
-
-http://people.openmoko.org/sean_chiang/bottom.pdf
+(no longer present)
 
 == Usage instructions ==
 
