--- a/Hardware:AGPS.mw
+++ b/Hardware:AGPS.mw
@@ -18,6 +18,9 @@ AGPS now means to load the almanac and the ephemeris from elsewhere, i.e. via a 
 
 AGPS is a nice convenience yet the success and proper functioning of TomTom and Navigon PDAs shows that you don't need that at all.
 
+It's worth noting that the GPS on the neo is sensitive enough to pick up GPS signals in buildings.
+If the spot you charge your neo happens to have a GPS signal, downloading the almanac from the satellites while it charges is essentially free, and takes no internet access at all. Do this daily, and you get most of the benefit of aGPS.
+
 ===== Q: The chip in the Neo1973 is a Global Locate AGPS. Anybody know what type? Hammerhead maybe? =====
 A 1: It is probably the same chipset as in ipaq hw6[59]15: http://wiki.xda-developers.com/index.php?pagename=SableGPS
 A 2: Should be Hammerhead.
