/* Q: Has anybody info on the whereabouts of assistance servers, especially in Belgium and Europe? */

--- a/Hardware:AGPS.mw
+++ b/Hardware:AGPS.mw
@@ -31,7 +31,8 @@ A: See above, the important part is the GPS and not the assistance. Antenna is t
 
 ===== Q: Has anybody info on the whereabouts of assistance servers, especially in Belgium and Europe? =====
 
-A: Can be anywhere on the net. Alternatively a service from the cellphone operators.
+A: They can be anywhere on the net. Alternatively a service from the cellphone operators. However, there may be occasions where you want a server 'near' where you are. See the later question on DGPS
+
 ===== Q: Using the assistance servers will probably mean that I will have to pay for that service. Any idea of the costs? =====
 
 A: They use the low cost of their chip as selling point. Their website implies that this is a service that comes with the chip. I'd call it not very clever if they are going to charge you - it would change their image from lowcost to money grabber and the reverse engineering of their binary protocol would happen even faster.
