*Empty MediaWiki Message*

--- a/Hardware:AGPS.mw
+++ b/Hardware:AGPS.mw
@@ -83,7 +83,7 @@ A: yes.
 A: The reciever does not emit significant amounts of RF - unless you are literally within centimeters of the device, it's not possible to pick it up. The other alternative would be that the supplied agpsd is trojaned, and can be asked somehow to report on your position.
 The position is entirely computed in agpsd, the GPS hardware cannot know it, it's too dumb.
 
-====== Q: What is DGPS, can DGPS and A-GPS work together?
+===== Q: What is DGPS, can DGPS and A-GPS work together? =====
 
 A: [http://www.oc.nps.navy.mil/oc2902w/gps/dgpsnote.html An overview of DGPS] Differential GPS is basically a way of removing systematic per-satellite errors from various causes (satellite clock drift, atmospheric effects) for 'nearby' recievers, given one reciever that knows where it is.
 
