Disclaimer that it is not an official product of OpenMoko.

--- a/MokoMakefile.mw
+++ b/MokoMakefile.mw
@@ -2,6 +2,8 @@ MokoMakefile is a fully automated way of setting up an OpenMoko development envi
 
 Note that MokoMakefile does *not* replace bitbake, or svn, or monotone, or openembedded, or qmake, or anything else.  It is a wrapper around all that to make it easy to set up and maintain a development environment that fully complies with the setup instructions published by OpenMoko.
 
+MokoMakefile is the work of RodWhitby - it is not an official product of OpenMoko (although I would be happy for them to pick it up and use it internally).
+
 Here are the steps to use it:
 
 1/ Make sure your build host is set up according to:
