--- a/Hardware:AGPS.mw
+++ b/Hardware:AGPS.mw
@@ -99,3 +99,28 @@ In any case, this would be another few hundred bytes a minute while this is acti
 Any stationary reciever - even a neo on charge, with a good signal, can produce useful error information. If it had a cheap internet connection at the same time, it could be constantly updating a global error model, for use by other neo owners.
 
 It may be that the apgsd cannot do this, and it will require reverse engineering.
+
+===== Q: Is an open-source GPS daemon able to be distributed by FIC? =====
+[http://www.fas.org/spp/starwars/offdocs/itar/p121.htm A web copy of the ITAR - International Traffic in Arms Regulation legislation, currently in force in the US]
+
+While stupid, this defines
+
+----
+... GPS receiving equipment with any of the following characteristics:
+...
+   (2) Designed for producing navigation results above 60,000 feet altitude and at 1,000 knots velocity or greater;
+----
+
+as being a munition.
+This is right after the section prohibiting rockets that can be used to deorbit satellites on a specific target, and just before nuclear weapons design and test equipment.
+
+And just because it's stupid doesn't mean they won't kick the doors in - or prevent it from sale and levy huge fines, after the gleefull lawyers at apple point it out. (you need DOD licenses to import/export)
+
+The agpsd daemon presumably implements this limit.
+
+Much established hardware has pretty much confirmed that it's OK to do it this way - as long as it's closed source, you can point at the evil hackers, and say that you never did it.
+
+An open source agpsd distributed with the neo might raise other issues, namely that at some point in the code, there is a self-documented if(velocity>1000kt) test, which can be trivially commented out.
+(the hardware must be able to do this, the velocity of a satellite towards and away from the user greatly exceeds 1000 knots.)
+
+If I was FIC, I would at the very least want a good legal opinion on if an open source agpsd (perhaps a user contributed one after decoding the binary stream that the hammerhead puts out) can be safely distributed, before doing so.
