/* Top case lid removed */

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -20,7 +20,7 @@ Visible in this image, from the right, going clockwise.
 
 *The blocky device at the edge of the case is the GPS antenna.
 **To the left of this, there are two gold pads, which are where the earpiece speaker connects.
-*The [[debug board]] connector.
+*The [[Debug Board]] connector.
 *At the left, the black semicircular device is the GSM antenna.
 **Immediately to its right, the small circular black/gold object is the microphone
 *At the top right, the ''911 button'''
