*Empty MediaWiki Message*

--- a/MokoMakefile.mw
+++ b/MokoMakefile.mw
@@ -15,7 +15,7 @@ Here are the steps to use it:
 4/ Start building
    make openmoko-devel-image
 
-This will set up the recommended directory structure as described in http://wiki.openmoko.org/wiki/Building_OpenMoko_from_scratch, will download all the required software (from the right places with the right versions), and will immediately start building an image.
+This will set up the recommended directory structure as described in [[Building OpenMoko from scratch]], will download all the required software (from the right places with the right versions), and will immediately start building an image.
 
 Once you have done this, you can choose to continue using the MokoMakefile to initiate your subsequent builds, or you can go into the build directory and run bitbake commands manually.  The choice is yours.
 
