--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -28,7 +28,7 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 *[[Distance Measuring]]
 
 =====SIR transceiver=====
-*Could be used to detect when to turn of the display (if the low power IR signal is reflected) and activate the key lock. And could be used as a remote. iPhone has a proximity sensor.
+*Could be used to detect when to turn off the display (if the low power IR signal is reflected) and activate the key lock. And could be used as a remote. iPhone has a proximity sensor.
 
 =====Standard 3.5mm jack=====
 
