--- a/Neo_1973.mw
+++ b/Neo_1973.mw
@@ -1,3 +1,18 @@
 FIC's first Linux based Mobile Phone.
 
 See [[GTA01 Hardware]] for more information on the hardware.
+
+== Availability ==
+    2007-03-11 Phase 1: Official Developer Launch
+    We will sell the Neo1973 direct from openmoko.com for US$350 plus
+    shipping. Sales and orders will be worldwide. We are specifically
+    targeting open source community developers.
+
+    2007-09-11 Phase 2: Mass Market Sale
+    Online sales will continue. We will also be available in a retail
+    stores and selected carriers around the world. At this point, we
+    hope your mom and dad will want to buy a Neo1973, too.
+
+    The 2nd generation OpenMoko device will also be introduced at this
+    time. We have something special in the works, but again, you will
+    help shape this device.
