--- a/Neo_1973.mw
+++ b/Neo_1973.mw
@@ -2,7 +2,7 @@ FIC's first Linux based Mobile Phone.
 
 See [[GTA01 Hardware]] for more information on the hardware.
 
-== Availability ==
+= Availability =
     2007-03-11 Phase 1: Official Developer Launch
     We will sell the Neo1973 direct from openmoko.com for US$350 plus
     shipping. Sales and orders will be worldwide. We are specifically
