--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -79,6 +79,10 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 =====Reposition Speakers=====
 * putting the two speakers on opposite sides of the screen would make the stereo sound much more effective
 
+The screen is 2.8" across.
+That's not especially effective.
+Also, the speaker noise does come out the side - look at the grills in the pictures. --[[User:Speedevil|Speedevil]] 06:19, 16 February 2007 (CET)
+
 =====Small metal frame for protection (like Siemens M65, only with more style)=====
 
 =====free GPIO ports on a connector to allow easy, simple hardware extensions=====
