Add note about PowerVR IP Graphic Core

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -91,7 +91,7 @@ Also, the speaker noise does come out the side - look at the grills in the pictu
 Hardware acceleration for video playback.
 
 =====3D acceleration=====
-3D hardware acceleration for 3D games, GUIs, etc.
+3D hardware acceleration for 3D games, GUIs, etc. (maybe a PowerVR MBX Lite ?).
 
 =====Alcohol Sensor=====
 Alcohol sensor adjacent to microphone.  It doesn't have to be accurate, just has to detect any amount of alcohol on the speaker's breath.  I understand this is a very narrow market, but alcohol is on every parent's mind.
