--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -23,8 +23,7 @@ For the ISB hub function, we use the TUSB2046B chip.
 
 ==== JTAG using FT2232 ====
 
-Basically, we integrate a USB-JTAG adaptor similar to the [Amontec JTAGkey-tiny].  The actual reference design that we used (Thanks to Joern!) can be found at 
-http://www.joernonline.de/dw/doku.php?id=start&idx=projects:oocdlink
+Basically, we integrate a USB-JTAG adaptor similar to the [Amontec JTAGkey-tiny].  The actual reference design that we used (Thanks to Joern!) can be found at www.oocdlink.com
 
 This provides us full JTAG debugging, at about 150times the speed of the [[wiggler]]
 
