*Empty MediaWiki Message*

--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -3,7 +3,7 @@
   |}
 <big>'''Welcome to the OpenMoko public Wiki'''</big>
 
-This is to be the evolving, definitive resource on [[Neo1973]] development -- the GSM+[[Hardware AGPS|AGPS]] Smartphone running [[OpenMoko]].  The intention is to collaboratively improve and update all information on this site.
+This is to be the evolving, definitive resource on [[Neo1973]] development -- the GSM+[[Hardware:AGPS|AGPS]] Smartphone running [[OpenMoko]].  The intention is to collaboratively improve and update all information on this site.
 
 == Introduction ==
 
