/* Q: Is an open-source GPS daemon able to be distributed by FIC? */

--- a/Hardware:AGPS.mw
+++ b/Hardware:AGPS.mw
@@ -124,3 +124,5 @@ An open source agpsd distributed with the neo might raise other issues, namely t
 (the hardware must be able to do this, the velocity of a satellite towards and away from the user greatly exceeds 1000 knots.)
 
 If I was FIC, I would at the very least want a good legal opinion on if an open source agpsd (perhaps a user contributed one after decoding the binary stream that the hammerhead puts out) can be safely distributed, before doing so.
+
+--[[User:Morricone|Morricone]] 11:15, 16 February 2007 (CET) You forget, that FIC is not located in the USA, so US laws do not apply.
