--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -3,11 +3,11 @@ Press coverage about OpenMoko / Neo1973 :
 === English ===
 
 ==== February 2007 ====
-* [http://gizmodo.com/gadgets/smartphones/first-look-the-antiiphone-openmokos-neo1973-236841.php gizmodo.com] does a preview
-* [http://www.onecompare.com/mobile-news/article-asp~aid~244~pub~56321102~story~openmoko-launch-the-official-portal-for-development-of-the-openmoko-platform onecompare.com]
-* [http://crunchgear.com/2007/02/15/openmokos-open-source-mobile-os/ Image of developer model?]
-* http://www.slashgear.com/openmoko-and-fic-neo1973-updates-153926.php
-*[http://www.linuxdevices.com/news/NS2657814070.html linuxdevices.com]
+*[http://www.linuxdevices.com/news/NS2657814070.html linuxdevices.com] Quick interview with Sean and some pictures
+* [http://gizmodo.com/gadgets/smartphones/first-look-the-antiiphone-openmokos-neo1973-236841.php gizmodo.com] Photos and comments on hardware and software
+* [http://www.onecompare.com/mobile-news/article-asp~aid~244~pub~56321102~story~openmoko-launch-the-official-portal-for-development-of-the-openmoko-platform onecompare.com] Short news article
+* [http://crunchgear.com/2007/02/15/openmokos-open-source-mobile-os crunchgear.com] Holding the phone upside down]
+* [http://www.slashgear.com/openmoko-and-fic-neo1973-updates-153926.php slashgear.com] Video interview and many pictures
 
 ==== November 2006 Amsterdam release ====
 * http://www.linuxdevices.com/news/NS2986976174.html
