--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -124,26 +124,26 @@ Whether or not you use usbtty, the first couple of messages will always be displ
 The bootloader is currently configured to waid for three seconds.  If a key press on the serial port is received within those three seconds, auto-boot is aborted.
 
 <pre>
-U-Boot 1.1.4-ga2c95a72-dirty (Aug  6 2006 - 22:05:48)
+U-Boot 1.2.0-moko1 (Feb 16 2007 - 00:36:13)
 
-DRAM:  64 MB
-Flash: 512 kB
+DRAM:  128 MB
 NAND:  64 MiB
+Found Environment offset in OOB..
+Video: 640x480x8 31kHz 59Hz
+USB:   S3C2410 USB Deviced
 In:    serial
 Out:   serial
 Err:   serial
-
-cs8900a chipid 0x630e
 Hit any key to stop autoboot:  0 
-QT2410 #
+GTA01Bv3 #
 </pre>
 
 === Auto-boot ===
 
 Auto-boot executes the command[s] specified in the ''bootcmd'' environment variable. The default configuration is:
 <pre>
-GTA01Bv2 # printenv
-bootcmd=nand read.e 0x32000000 kernel; bootm 0x32000000
+GTA01Bv3 # printenv
+bootcmd=setenv bootargs ${bootargs_base} ${mtdparts}; nand read.e 0x32000000 kernel; bootm 0x32000000
 </pre>
 
 This basically tells us that it will load the content of the NAND partition '''kernel''' to memory address 0x32000000 and then try to boot it.  
@@ -152,45 +152,45 @@ This basically tells us that it will load the content of the NAND partition '''k
 
 u-boot is configured to manage a non-volatile environment that is stored in NAND flash.  You can use the commands to read/alter/store the environment in the following example:
 <pre>
-QT2410 # printenv
-bootcmd=mmcinit; ext2load mmc 0 0x32000000 uImage; bootm 0x32000000
-bootdelay=3
+GTA01Bv2 # printenv
 baudrate=115200
-ipaddr=10.0.0.110
-serverip=10.0.0.1
-netmask=255.255.255.0
-bootargs=root=/dev/mmcblk0p1 console=ttySAC0,115200 loglevel=8 rootdelay=10
-stdin=serial
+bootargs=rootfstype=jffs2 root=/dev/mtdblock4 console=ttySAC0,115200 console=tty0 loglevel=8 dyntick=enable lpj=252416
+usbtty=cdc_acm
+bootdelay=10
 stdout=serial
 stderr=serial
+stdin=serial
+mtdparts=mtdparts=neo1973-nand:0x00030000(u-boot),0x0000c000(u-boot_env),0x00200000(kernel),0x00130000(splash),0x03c94000(rootfs)
+mtdids=nand0=neo1973-nand
+bootargs_base=rootfstype=jffs2 root=/dev/mtdblock4 console=ttySAC0,115200 console=tty0 loglevel=8 dyntick=enable lpj=252416
+bootcmd=setenv bootargs ${bootargs_base} ${mtdparts}; nand read.e 0x32000000 kernel; bootm 0x32000000
+pcf50606_int1=0x40
+filesize=160C000
+partition=nand0,0
+mtddevnum=0
+mtddevname=u-boot
 
-Environment size: 271/16380 bytes
-QT2410 # setenv bootdelay 10
-QT2410 # printenv bootdelay
+Environment size: 670/16380 bytes
+GTA01Bv3 # setenv bootdelay 10
+GTA01Bv3 # printenv bootdelay
 bootdelay=10
-QT2410 # saveenv
+GTA01Bv3 # saveenv
 Saving Environment to NAND...
 Erasing Nand...Writing to Nand... done
-QT2410 # 
+GTA01Bv3 # 
 </pre>
 
 Note: When setting multiple commands, e.g. for bootcmd, you need to escape the ';', for instance
 
 <pre>
-QT2410 # setenv bootcmd mmcinit\; ext2load mmc 0 0x32000000 uImage\; bootm 0x32000000
+GTA01Bv3 # setenv bootcmd mmcinit\; ext2load mmc 0 0x32000000 uImage\; bootm 0x32000000
 </pre>
-
-As of 2007-02-01, laforge says the correct bootargs are:
-<pre>
-rootfstype=jffs2 root=/dev/mtdblock4 console=ttySAC0,115200 console=tty0 loglevel=8
-</pre>
-Note that this requires flashing the jffs2 root image into NAND.
 
 === MMC/SD ===
 
 in order to initialize a MMC/SD card, you have to use the ``mmcinit'' command.
 <pre>
-QT2410 # mmcinit
+GTA01Bv3 # mmcinit
 trying to detect SD Card...
 MMC found. Card desciption is:
 Manufacturer ID = 58d564
@@ -201,11 +201,12 @@ Month = 5
 Year = 2000
 READ_BL_LEN=15, C_SIZE_MULT=7, C_SIZE=3197
 size = 4208984064
+GTA01Bv3 #
 </pre>
 
 afterwards, you can read ext2 filesystems like:
 <pre>
-QT2410 # ext2ls mmc 0
+GTA01Bv3 # ext2ls mmc 0
 <DIR>       1024 .
 <DIR>       1024 ..
 <DIR>      12288 lost+found
@@ -215,7 +216,7 @@ QT2410 # ext2ls mmc 0
 === NAND ===
 
 <pre>
-QT2410 # help nand
+GTA01Bv3 # help nand
 nand info                  - show available NAND devices
 nand device [dev]     - show or set current device
 nand read[.jffs2]     - addr off size
@@ -233,13 +234,13 @@ nand biterr off - make a bit error at offset (UNSAFE)
 ==== Loading Kernel from NAND ====
 
 <pre>
-QT2410 # nand read 0x32000000 0x34000 0x200000
+GTA01Bv3 # nand read 0x32000000 kernel
 
 NAND read: device 0 offset 212992, size 2097152 ...  2097152 bytes read: OK
-QT2410 # bootm 0x32000000
+GTA01Bv3 # bootm 0x32000000
 ## Booting image at 32000000 ...
-   Image Name:   Kernel Image QT2410
-   Created:      2006-08-06  20:23:01 UTC
+   Image Name:   OpenMoko Kernel Image Neo1973
+   Created:      2007-02-15  23:54:18 UTC
    Image Type:   ARM Linux Kernel Image (gzip compressed)
    Data Size:    1546258 Bytes =  1.5 MB
    Load Address: 30008000
@@ -255,9 +256,9 @@ The following set of commands loads the file u-boot.bin from ext2/mmc and flashe
 bootloader flash partition:
 
 <pre>
-QT2410 # ext2load mmc 0 0x32000000 u-boot.bin
-QT2410 # nand erase u-boot
-QT2410 # nand write 0x32000000 u-boot
+GTA01Bv3 # ext2load mmc 0 0x32000000 u-boot.bin
+GTA01Bv3 # nand erase u-boot
+GTA01Bv3 # nand write 0x32000000 u-boot ${filesize}
 </pre>
 
 ==== Writing kernel to NAND ====
@@ -266,9 +267,9 @@ The following set of commands loads the file uImage from ext2/mmc and flashes it
 kernel flash partition:
 
 <pre>
-QT2410 # ext2load mmc 0 0x32000000 uImage
-QT2410 # nand erase kernel
-QT2410 # nand write.e 0x32000000 kernel
+GTA01Bv3 # ext2load mmc 0 0x32000000 uImage
+GTA01Bv3 # nand erase kernel
+GTA01Bv3 # nand write.e 0x32000000 kernel ${filesize}
 </pre>
 
 ==== Writing rootfs to NAND ====
@@ -277,9 +278,9 @@ The following set of commands loads the file rootfs.jffs2 from ext2/mmc and flas
 rootfs flash partition:
 
 <pre>
-QT2410 # ext2load mmc 0 0x32000000 rootfs.jffs2
-QT2410 # nand erase rootfs
-QT2410 # nand write.e 0x32000000 rootfs real_size_of_rootfs_in_hex
+GTA01Bv3 # ext2load mmc 0 0x32000000 rootfs.jffs2
+GTA01Bv3 # nand erase rootfs
+GTA01Bv3 # nand write.e 0x32000000 ${filesize}
 </pre>
 
 Please note that this will only work with root file system sizes that are smaller than the amount of memory above 0x32000000, which in the case of 64MB SDRAM is something like 32MB.
@@ -298,7 +299,6 @@ neo1973 charger fast - enable fast (500mA) charging
 neo1973 charger off - disable charging
 neo1973 backlight (on|off) - switch backlight on or off
 neo1973 vibrator (on|off) - switch vibrator on or off
-neo1973 266MHz (on|off) - switch 266MHz on or off
 </pre>
 
 ==== Power-off ====
@@ -363,15 +363,34 @@ and
  neo1973 vibrator off
 respectively.
 
+=== S3C2410 specific commands ===
+
+<pre>
+GTA01Bv2 # help s3c2410
+s3c2410 speed get - display current PLL speed config
+s3c2410 speed list - display supporte PLL speed configs
+s3c2410 speed set - set PLL speed
+GTA01Bv2 # s3c2410 speed list
+50 MHz
+101 MHz
+202 MHz
+266 MHz
+GTA01Bv2 # s3c2410 speed get
+FCLK = 202 MHz, HCLK = 101 MHz, PCLK = 50 MHz
+GTA01Bv2 # s3c2410 speed set 101
+GTA01Bv2 # s3c2410 speed get
+FCLK = 101 MHz, HCLK = 50 MHz, PCLK = 50 MHz
+</pre>
+
 ==== 266MHz clock ====
 
 You can re-configure the [[S3C2410]] PLL to generate a 266 MHz core cpu clock (rather than the 200MHz default) by using
- neo1973 266MHz on
+ GTA01Bv2 # s3c2410 speed set 266 
 and
- neo1973 266MHz off
+ GTA01Bv2 # s3c2410 speed set 202
 respectively.
 
-{{warning|The current hardware (as of GTA01Bv3) does not run stable at 266MHz yet!}}
+{{warning|The current hardware (as of GTA01Bv3) only runs stable at 266MHz if you do not attach aynthing (esp. the FPC / [[Debug Board]] to the Debug Port}}
 
 === TFTP on QT2410 ===
 
