--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -105,6 +105,7 @@ The USB Device controller is inside the S3C2410
 * Driver: https://svn.openmoko.org/trunk/src/target/kernel/patches/s3c2410_udc.patch
 * Please see [[USB Product IDs]] on information about which Vendor/Product IDs we use
 **Does the device charge through the USB device port? It would be nice if that information was here.--[[User:Perry|Perry]] 14:55, 15 February 2007 (CET)
+**1200 mAh battery (charged over USB) (from their announcement)
 **Which USB connector????(Standard mini-usb possibly from the photo)
 
 === Audio ===
