/* February 2007 */  deletet one mistake

--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -6,7 +6,7 @@ Press coverage about OpenMoko / Neo1973 :
 *[http://www.linuxdevices.com/news/NS2657814070.html linuxdevices.com] Quick interview with Sean and some pictures
 * [http://gizmodo.com/gadgets/smartphones/first-look-the-antiiphone-openmokos-neo1973-236841.php gizmodo.com] Photos and comments on hardware and software
 * [http://www.onecompare.com/mobile-news/article-asp~aid~244~pub~56321102~story~openmoko-launch-the-official-portal-for-development-of-the-openmoko-platform onecompare.com] Short news article
-* [http://crunchgear.com/2007/02/15/openmokos-open-source-mobile-os crunchgear.com] Holding the phone upside down]
+* [http://crunchgear.com/2007/02/15/openmokos-open-source-mobile-os crunchgear.com Holding the phone upside down]
 * [http://www.slashgear.com/openmoko-and-fic-neo1973-updates-153926.php slashgear.com] Video interview and many pictures
 
 ==== November 2006 Amsterdam release ====
