--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -9,6 +9,7 @@ This is to be the evolving, definitive resource on [[Neo1973]] development -- th
 
 * [[Introduction]] - What openmoko is and what it is not.
 ** [[Introduction#Photos|Photos]]
+* [[FAQ | Frequently Asked Questions]]
 
 == Project Resources ==
 * [[Development resources]] - Describes the resources (lists, svn,&nbsp;...)
