--- a/How_to_run_OpenMoko_Apps_on_PC.mw
+++ b/How_to_run_OpenMoko_Apps_on_PC.mw
@@ -26,6 +26,13 @@ Edit $HOME/.gtkrc-2.0 to something like that:
 
 ===Run the examples===
 
+==== Naked ====
+
   bin/openmoko-stylus-demo
   bin/openmoko-finger-demo
   bin/openmoko-chordmaster
+
+==== In Xoo ===
+
+Adjust svn://src/target/OM-2007/devel/scripts/launch-xoo to your needs (you may need to build some dependencies forehand)
+Then set DISPLAY=:1 and run the examples
