*Empty MediaWiki Message*

--- a/Building_OpenMoko_2007.1_from_scratch.mw
+++ b/Building_OpenMoko_2007.1_from_scratch.mw
@@ -98,24 +98,7 @@ emerge -u subversion quilt monotone diffstat texi2html dev-util/git psyco
 
 [http://www.openembedded.org/wiki/OEandYourDistro  Instructions for installing prerequisites in other distributions]
 
-If the local user name does not match the user name with which you access SVN, you can put the following script in your PATH before the regular location of "svn" (usually /usr/bin/. Change
-the script below if your "svn" resides in a different directory. You can find out where it is
-with "which svn".).
-
-Here, we assume that $HOME/bin is searched early enough. Replace "werner"
-with your user name.
-<pre>
-cat <<EOF >$HOME/bin/svn
-#!/bin/sh
-exec /usr/bin/svn --username=werner "\$@"
-EOF
-chmod +x $HOME/bin/svn
-</pre>
-
-Unfortunately, some SVN sub-commands, such as "svn add", do not accept the username option.
-Thus, if you are using the script above, you will have to specify the full path to invoke SVN
-in such cases, e.g.
-  % /usr/bin/svn add ...
+If the local user name does not match the user name with which you access SVN, you can put your username in the url you use to checkout, eg. svn+ssh://joe@stuff.org/svn/stuff.
 
 ===  Lab host prerequisites  ===
 '''(Role: LAB)'''
