add Disinfection UV-Light

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -95,3 +95,7 @@ Hardware acceleration for video playback.
 
 =====Alcohol Sensor=====
 Alcohol sensor adjacent to microphone.  It doesn't have to be accurate, just has to detect any amount of alcohol on the speaker's breath.  I understand this is a very narrow market, but alcohol is on every parent's mind.
+
+
+=====Disinfection UV-Light=====
+I had read about it in an Article on http://newscientist.com. But I don´t found it now.
