--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -98,4 +98,4 @@ Alcohol sensor adjacent to microphone.  It doesn't have to be accurate, just has
 
 
 =====Disinfection UV-Light=====
-I had read about it in an Article on http://newscientist.com. But I don´t found it now.
+I had read about it in an Article on http://www.americanairandwater.com/UV-news/. But Motorola patents it.
