/* Integrated WiFi hardware */ Added Yate port offering and emphasized connectivity importance

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -9,7 +9,9 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 *To sync data
 *To access Internet when WiFi is available (at home, work, school, friends)
 *For VoIP (this uses much power but maybe the user have the charger connected)
+**I'm willing to port [http://yate.null.ro/ Yate] to it if the Internet connectivity issue is solved --[[User:Csdexter|@Dexter]] 13:58, 16 February 2007 (CET)
 *for videoconferencing (as with AccessGrid)
+*Even 802.11b 11Mbps -only would do -- the point is being able to connect it to the Internet without incurring the (sometimes huge) costs of GPRS or (even worse) HSCSD.
 
 =====LED=====
 *A blinking LED would be cheap and low power, good for informing the user about new SMS/Email....
