--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -18,6 +18,7 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 **A simple alternative to this would be for one small segment of the LCD to be seperately backlit. There are typically many LEDs in the backlight, all normally on equally. This has the large advantage that you can display reasonable amounts of information on the bit of the screen that's illuminated. The disadvantage is the field of view is smaller, and it's comparatively dimmer, as the LCD absorbs some light.
 
 *Note: the LED and button ideas could be combined: illuminated buttons
+*A yellow LED for GSM/GPRS Tx burst, a blue one for Bluetooth/WiFi Tx burst, a green one for non-urgent notifications (sleep state, missed call etc.) and a red one for urgent notifications (battery almost drained out, new SMS etc.). All of this could be done in one, multicoloured (RGB) LED, similar to the nice one on the Yaesu VX-7R.
 
 =====D-Pad and Buttons=====
 *Adding a D-pad (to the bottom of the phone) and 2 to 4 buttons (to the top) would provide some tactile input controls, in addition to the touchscreen. They could be used as shortcut keys in the menu, or playback control when playing media. When the phone is held sideways, they can be used as games controls. (With touchscreen alone, gameplay options are limited)
