--- a/Introduction.mw
+++ b/Introduction.mw
@@ -11,6 +11,12 @@ This initative has been initiated by FIC Inc. and OpenMoko, Inc.
 == Photos ==
 
 === Outside ===
+[[Image:FIC-neo1973_small.png|200px|frontside]]
+[[Image:Gta01b v3 case back white.jpg|200px|backside]]
+
 === Inside ===
 [[Image:Gta01b v3 top.jpg|200px|display (top) side]]
 [[Image:Gta01b v3 bottom.jpg|200px|component (back) side]]
+[[Image:Gta01b v3 case top open pcb lifted.jpg|200px|case top open pcb lifted]]
+[[Image:Gta01b v3 case top open pcb lift white.jpg|200px|case top open pcb lift white]]
+[[Image:Gta01b v3 case top open white.jpg|200px|case top open white]]
