--- a/Hardware:AGPS.mw
+++ b/Hardware:AGPS.mw
@@ -126,3 +126,8 @@ An open source agpsd distributed with the neo might raise other issues, namely t
 If I was FIC, I would at the very least want a good legal opinion on if an open source agpsd (perhaps a user contributed one after decoding the binary stream that the hammerhead puts out) can be safely distributed, before doing so.
 
 --[[User:Morricone|Morricone]] 11:15, 16 February 2007 (CET) You forget, that FIC is not located in the USA, so US laws do not apply.
+
+Very true, however, this would mean that it could not be imported into the US.
+Also that anyone from FIC involved in this could not travel to the US without fear of arrest.
+The penalties are really quite high.
+--[[User:Speedevil|Speedevil]] 14:10, 16 February 2007 (CET)
