--- a/Introduction.mw
+++ b/Introduction.mw
@@ -11,7 +11,7 @@ This initative has been initiated by FIC Inc. and OpenMoko, Inc.
 == Photos ==
 
 === Outside ===
-[[Image:FIC-neo1973_small.png|200px|frontside]]
+[[Image:FIC-neo1973_small.jpg|200px|frontside]]
 [[Image:Gta01b v3 case back white.jpg|200px|backside]]
 
 === Inside ===
