--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -32,6 +32,7 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 
 =====SIR transceiver=====
 *Could be used to detect when to turn off the display (if the low power IR signal is reflected) and activate the key lock. And could be used as a remote. iPhone has a proximity sensor.
+*FIR would be nice as well, but I would settle for SIR if it would be added. Linux already has a working IrDA stack so the standard part would be satisfied. I would be more than glad to write lirc thingies for OpenMoko then :)
 
 =====Standard 3.5mm jack=====
 
