/* Top case lid removed */

--- a/Disassembling_Neo_1973.mw
+++ b/Disassembling_Neo_1973.mw
@@ -18,7 +18,7 @@
 
 Visible in this image, from the right, going clockwise.
 
-*The blocky device at the right edge of the case is the GPS antenna.
+*The blocky device at the far right is the GPS antenna.
 **To the left of this, there are two gold pads, which are where the earpiece speaker connects.
 *The [[Debug Board]] connector.
 *At the left, the black semicircular device is the GSM antenna.
