/* Standard 3.5mm jack */ Dismissed request as non-essential

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -35,6 +35,7 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 *FIR would be nice as well, but I would settle for SIR if it would be added. Linux already has a working IrDA stack so the standard part would be satisfied. I would be more than glad to write lirc thingies for OpenMoko then :)
 
 =====Standard 3.5mm jack=====
+*I think everyone interested (and knowledgeable) enough to buy a Neo can make a 2.5mm male to 3.5mm female adaptor cable in under 1/2h and under 10EUR :-)
 
 =====Multitouch screen=====
 
