/* [[Expansion Back]] */ Supported initiative as being "the right thing to do"(tm)

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -52,6 +52,7 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 
 =====[[Expansion Back]]=====
 * Replacement backs with additional features
+* I believe this would be a great idea, if put into practice. It would solve the ''extensibility'' need, usually assciated with Open Source projects. It would allow for a ton other devices and functionality to be developed and put into use without making it a burden for FIC.
 
 =====Thumb keyboard or keyboard attachment accessory=====
 *Could be slide out or clamshell (hinge on long side) design with an external OLED. The keyboard should be protected when not in use.
