--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -100,7 +100,7 @@ This Wiki is our public wiki, http://wiki.openmoko.org/. You're already in it, i
 
 === Bugzilla ===
 
-Our bug tracking system for software issues (which will become public at product release time) is available at http://bugzilla.openmoko.org/
+Our bug tracking system for software issues is available at http://bugzilla.openmoko.org/
 
 === IRC ===
 
