/* Standard 3.5mm jack */  Remove sarcasm.

--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -37,7 +37,8 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 =====Standard 3.5mm jack=====
 *I think everyone interested (and knowledgeable) enough to buy a Neo can make a 2.5mm male to 3.5mm female adaptor cable in under 1/2h and under 10EUR :-)
 
-Certainly - now make it light, small, pretty, tangle-free. You can also easily add battery life by gluing a car battery to the phone, with a 12V-5V converter. --[[User:Speedevil|Speedevil]] 14:19, 16 February 2007 (CET)
+Certainly - now make it light, small, pretty, durable, tangle-free. 
+I want a 3.5mm jack. The only problem is - are headsets widely available in the same format as 2.5mm. --[[User:Speedevil|Speedevil]] 14:28, 16 February 2007 (CET)
 
 =====Multitouch screen=====
 
