--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -55,7 +55,7 @@ I want a 3.5mm jack. The only problem is - are headsets widely available in the 
 
 =====[[Expansion Back]]=====
 * Replacement backs with additional features
-* I believe this would be a great idea, if put into practice. It would solve the ''extensibility'' need, usually associated with Open Source projects. It would allow for a ton other devices and functionality to be developed and put into use without making it a burden for FIC.
+* I believe this would be a great idea, if put into practice. It would solve the ''extensibility'' need, usually associated with Open Source projects. It would allow for lots of other devices and for functionality to be developed and put into use without making it a burden for FIC.
 
 =====Thumb keyboard or keyboard attachment accessory=====
 *Could be slide out or clamshell (hinge on long side) design with an external OLED. The keyboard should be protected when not in use.
