--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -109,3 +109,4 @@ Alcohol sensor adjacent to microphone.  It doesn't have to be accurate, just has
 =====Disinfection UV-Light=====
 I had read about it in an Article on http://www.americanairandwater.com/UV-news/. But Motorola patents it.
 Yes - finally a way to stop the billions of annual deaths due to cellphone infections! --[[User:Speedevil|Speedevil]] 14:04, 16 February 2007 (CET)
+It´s just something that flying in my head... It´s not the first "unreal" or "useless" idea. Just for fun! --[[User:MookiE|MookiE]] 14:51, 16 February 2007 (CET)
