/* Analog wired Headset */

--- a/Neo_1973_hardware.mw
+++ b/Neo_1973_hardware.mw
@@ -129,7 +129,7 @@ There's a National Semiconductor LM4857 Stereo Amplifier at the analog audio out
 
 ==== Analog wired Headset ====
 
-There's a four-ring 2.5mm stereo jack which provides connectivity to old-fashined wired headsets.
+There's a four-ring 2.5mm stereo jack which provides connectivity to old-fashioned wired headsets.
 
 The headsets used by Motorola smartphones (A780,A1200, ...) have a compatible configuration
 
