--- a/Wish_List_-_Hardware.mw
+++ b/Wish_List_-_Hardware.mw
@@ -30,6 +30,9 @@ Some small hardware enhancement could be cheap, but very useful. Please add your
 *[[Determine Position]]
 *[[Distance Measuring]]
 
+=====Tilt sensor (gyroscope?)===== 
+*Could be used in many ways including tilting the display in a similar way to that of the iphone making it easier to view images and browse web pages. 
+
 =====SIR transceiver=====
 *Could be used to detect when to turn off the display (if the low power IR signal is reflected) and activate the key lock. And could be used as a remote. iPhone has a proximity sensor.
 *FIR would be nice as well, but I would settle for SIR if it would be added. Linux already has a working IrDA stack so the standard part would be satisfied. I would be more than glad to write lirc thingies for OpenMoko then :)
