--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -55,11 +55,38 @@ Your Debug Board contains a small serial EEPROM which must be flashed correctly.
 
 ===== Flashing with Linux =====
 In order to do so, you can use the ftdi_eeprom program from 
-http://www.intra2net.com/de/produkte/opensource/ftdi/
+http://www.intra2net.com/de/produkte/opensource/ftdi/. Unfortunately, the latest version (0.2) doesn't yet contain support for our FT2232D, so you need the patch from http://people.openmoko.org/laforge/misc/debug_board_v2/ftdi_eeprom/ftdi_eeprom-0.2-moko.patch
 
 Furthermore, you will need
 * The EEPROM image http://people.openmoko.org/laforge/misc/debug_board_v2/ftdi_eeprom/neo1973_debug_board_v2.eeprom
 * The EEPROM config http://people.openmoko.org/laforge/misc/debug_board_v2/ftdi_eeprom/neo1973_debug_board_v2.ftdi
+
+Once you have compiled ftdi_eeprom, you can run
+ ftdi_eeprom --flash-eeprom neo1973_debug_board_v2.ftdi
+
+{{warning|Make sure you don't have any other FTDI FT232 / FT2232 based devices attached to the USB while running ftdi_eeprom.  It might be wise to disconnect everything but the debug board}}
+
+Once the flashing has finished, just disconnect and reconnect, and you should see
+<pre>
+$ lsusb -v -d 0x1457:                                                                                                                                                                                               
+Bus 005 Device 009: ID 1457:5118  
+Device Descriptor:
+  bLength                18
+  bDescriptorType         1
+  bcdUSB               2.00
+  bDeviceClass            0 (Defined at Interface level)
+  bDeviceSubClass         0 
+  bDeviceProtocol         0 
+  bMaxPacketSize0         8
+  idVendor           0x1457 
+  idProduct          0x5118 
+  bcdDevice            5.00
+  iManufacturer           1 OpenMoko
+  iProduct                2 Debug Board for Neo1973
+  iSerial                 0 
+  bNumConfigurations      1
+  [...]
+</pre>
 
 ===== Flashing with Windows =====
 In order to do so, you can use the FTDI Mprog program from http://www.ftdichip.com/Resources/Utilities/MProg3.0_Setup.exe
