new diagram, reflecting the actual board (rather than the initial concept)

--- a/Debug_Board_v2.mw
+++ b/Debug_Board_v2.mw
@@ -1,6 +1,6 @@
 Architecture of the second version of the Neo1973 debug board:
 
-[[Image:Debugboard v2 concept.jpg|thumb|500px|Architecture Diagram]]
+[[Image:Debugboard v2 diagram.png|thumb|500px|Architecture Diagram]]
 [[Image:Neo1973 debugboard v2 top annotated.jpg|thumb|500px|Annotated PCB Photograph]]
 
 == Overview ==
