/* Build everything in one run using Qmake */

--- a/How_to_run_OpenMoko_Apps_on_PC.mw
+++ b/How_to_run_OpenMoko_Apps_on_PC.mw
@@ -9,7 +9,7 @@
 ** qmake from Qt4 (libqt4-dev on Debian)
 
 ===Build everything in one run using Qmake===
-{{Note|qmake is Mickey's preferred build tool, you can use autotools as well...}}
+{{Note|qmake is Mickey's preferred build tool, it probably doesn't work if you're not him. Please use autotools...}}
 
   cd <svn-checkout>/src/target/OM-2007
   . ./makevars.sh
