--- a/Neo1973_compatible_cellphone_providers.mw
+++ b/Neo1973_compatible_cellphone_providers.mw
@@ -1,3 +1,6 @@
+{|align=right
+  |__TOC__
+  |}
 This is a breakdown of OpenMoko-compatible providers around the world. Please help by filling this out alphabetically:
 
 == Canada ==
