--- a/Press_Coverage.mw
+++ b/Press_Coverage.mw
@@ -4,10 +4,28 @@ Press coverage about OpenMoko / Neo1973 :
 
 ==== February 2007 ====
 *[http://www.linuxdevices.com/news/NS2657814070.html linuxdevices.com] Quick interview with Sean and some pictures
-* [http://gizmodo.com/gadgets/smartphones/first-look-the-antiiphone-openmokos-neo1973-236841.php gizmodo.com] Photos and comments on hardware and software
-* [http://www.onecompare.com/mobile-news/article-asp~aid~244~pub~56321102~story~openmoko-launch-the-official-portal-for-development-of-the-openmoko-platform onecompare.com] Short news article
-* [http://crunchgear.com/2007/02/15/openmokos-open-source-mobile-os crunchgear.com] Holding the phone upside down
-* [http://www.slashgear.com/openmoko-and-fic-neo1973-updates-153926.php slashgear.com] Video interview and many pictures
+*[http://gizmodo.com/gadgets/smartphones/first-look-the-antiiphone-openmokos-neo1973-236841.php gizmodo.com] Photos and comments on hardware and software
+*[http://www.onecompare.com/mobile-news/article-asp~aid~244~pub~56321102~story~openmoko-launch-the-official-portal-for-development-of-the-openmoko-platform onecompare.com] Short news article
+*[http://crunchgear.com/2007/02/15/openmokos-open-source-mobile-os crunchgear.com] Holding the phone upside down
+*[http://www.slashgear.com/openmoko-and-fic-neo1973-updates-153926.php slashgear.com] Video interview and many pictures
+
+==== January 2007 ====
+*[http://popsci.typepad.com/ces2007/2007/01/opensource_stri.html Popsci.com: Open Source Strikes Again]
+*[http://gizmodo.com/gadgets/smartphones/openmoko-smartphone-did-they-have-a-time-machine-or-what-229243.php Gizmodo.com: OpenMoko interface compared to iPhone]
+*[http://www.linuxjournal.com/xstatic/abstracts/upfront Linux Journal:  Doc Searls in the feb 2007 issue]
+*[http://www.osdir.com/Article9642.phtml OSDir.com: Mobile Linux for the Mobile Fan] -> [http://www.madpenguin.org/cms/?m=show&id=7710 MadPenguin: Mobile Linux for the Mobile Fan]
+*[http://zedomax.com/blog/tag/openmoko/fr/ FR News: OpenMoko - le monde premier a intégré la plateforme mobile de communications de source ouverte] (an automated translation of *[http://hackedgadgets.com/2007/01/11/openmoko-world%e2%80%99s-first-integrated-open-source-mobile-communications-platform/ Hacked Gadgets: OpenMoko - World’s First Integrated Open Source Mobile Communications Platform])
+*[http://www.usnews.com/usnews/biztech/davesdownload/archive/070112/a_populist_challenge_to_apples.htm US News: A Populist Challenge to Apple's iPhone]
+*[http://www.tectonic.co.za/view.php?id=1321 tectonic: iPhone vs OpenMoko: The open alternative]
+*[http://www.informationweek.com/news/showArticle.jhtml?articleID=196802206&subSection=All+Stories InformationWeek: Startup Promises First Linux Smartphone Based On Open Standards]
+*[http://www.theregister.co.uk/2007/01/15/open_phone/ The Register: Open Phones with Open Moko]
+*[http://techreport.com/onearticle.x/11589 The Tech Report: OpenMoko offers open-source smart phone]
+*[http://blogs.ft.com/techblog/2007/01/openmoko_harks_.html Financial Times: OpenMoko harks back to Hello Moto]
+*[http://hardware.slashdot.org/article.pl?sid=07/01/20/1551200 Slashdot: OpenMoko Schedule Announced]
+*[http://www.youtube.com/watch?v=jRvtAAXTIlg Youtube: Interview with Sean Moss-Pultz] ([http://www.monoploid.be/dl/openmoko_sean_interview.ogm mirror in Ogg format])
+*[http://www.nyteknik.se/art/48697 NyTeknik: Snart är den öppna Linuxtelefonen här] (Swedish) (Translation: this article states free release to selected developers Feb 11, commercial release to developers March 11, and main release to market Sep 11. See also [http://lists.openmoko.org/pipermail/announce/2007-January/000000.html]) 
+*[http://www.libervis.com/article/forget_iphone_hail_openmoko_the_true_revolution Libervis.com: Forget iPhone, hail OpenMoko, the true revolution]
+*[http://gizmodo.com/gadgets/smartphones/sizemodo-iphone-vs-openmoko-neo1073-229294.php Gizmodo: Sizemodo: iPhone vs. Openmoko Neo1973] (please, don't mind the typo in the title)
 
 ==== November 2006 Amsterdam release ====
 * http://www.linuxdevices.com/news/NS2986976174.html
